customer2/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: customer2
spec: {}
status: {}
