customer2/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: customer2
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
