customer2/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress   
  namespace: customer2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "customer2-nginx-ingress"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app-svc # name of your cw-app service
            port:
              number: 80
      - path: /app
        pathType: Prefix
        backend:
          service: 
            name: app-svc # name of your cw-app service
            port:
              number: 80
